crates/apollo-compiler/test_data/diagnostics/0057_duplicate_type_names.txt
Error: the type `World` is defined multiple times in the schema
   ╭─[0057_duplicate_type_names.graphql:9:6]
   │
 1 │ interface World {
   │           ──┬──  
   │             ╰──── previous definition of `World` here
   │ 
 9 │ type World implements World {
   │      ──┬──  
   │        ╰──── `World` redefined here
   │ 
   │ Help: remove or rename one of the definitions, or use `extend`
───╯
Error: the type `X` is defined multiple times in the schema
    ╭─[0057_duplicate_type_names.graphql:16:7]
    │
 14 │ scalar X @specifiedBy(url: "https://apollographql.com")
    │        ┬  
    │        ╰── previous definition of `X` here
    │ 
 16 │ union X @X = Object
    │       ┬  
    │       ╰── `X` redefined here
    │ 
    │ Help: remove or rename one of the definitions, or use `extend`
────╯
Error: the type `X` is defined multiple times in the schema
    ╭─[0057_duplicate_type_names.graphql:18:6]
    │
 14 │ scalar X @specifiedBy(url: "https://apollographql.com")
    │        ┬  
    │        ╰── previous definition of `X` here
    │ 
 18 │ enum X { Y, Z }
    │      ┬  
    │      ╰── `X` redefined here
    │ 
    │ Help: remove or rename one of the definitions, or use `extend`
────╯
Error: the type `X` is defined multiple times in the schema
    ╭─[0057_duplicate_type_names.graphql:20:6]
    │
 14 │ scalar X @specifiedBy(url: "https://apollographql.com")
    │        ┬  
    │        ╰── previous definition of `X` here
    │ 
 20 │ type X {
    │      ┬  
    │      ╰── `X` redefined here
    │ 
    │ Help: remove or rename one of the definitions, or use `extend`
────╯

